--- a/style.css
+++ b/style.css
@@ -26,8 +26,9 @@ table {
 /* #Basic Styles
 ================================================== */
 body {
-	background: #252831 url(images/bg.png) no-repeat top center;
-	font: 13px/18px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: #252831 url(images/2.jpg) no-repeat fixed bottom center;
+    background-size: cover;
+    font: 13px/18px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #fff;
 	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 	-webkit-text-size-adjust: 100%;
@@ -274,8 +275,8 @@ ul.verdict .bad h4 { background: url(images/sprite.png) no-repeat 0 -115px; }
 
 /* #Footer styles
 ================================================== */
-#footer-wrap { background: #1e2026 url(images/bg_footer.png) no-repeat bottom center; border-top:solid 1px #30333c; padding:50px 0 0 0; }
-.credits-wrap { background: #000; background: rgba(0,0,0,0.5); padding:20px; margin-top:50px; border-top:solid 1px rgba(255,255,255,0.15); }
+#footer-wrap { background: #1e2026 url(images/bg_footer.png) no-repeat bottom center; border-top:solid 1px #30333c; /*padding:50px 0 0 0;*/ }
+.credits-wrap { background: #000; background: rgba(0,0,0,0.5); padding:20px; /*margin-top:50px;*/ border-top:solid 1px rgba(255,255,255,0.15); }
 .credits-wrap p { margin-bottom:0; font-size:11px;}
 
 /* #Widgets
