--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,12 @@
 @media screen and (max-width: 768px) {
+  body {
+    background: rgba(255, 255, 255, .4) url(../images/smallBG.jpg) no-repeat fixed bottom center;
+    background-size: 100% 100%;
+  }
 
+  #block-for-slider {
+    width: 100%;
+    margin: 100px auto;
+    margin-top: 40px;
+  }
 }
