--- a/dev/media.css
+++ b/dev/media.css
@@ -1,11 +1,24 @@
 @media screen and (max-width: 768px) {
     body {
-        background: rgba(255, 255, 255, .4) url(../images/smallBG.jpg) no-repeat fixed bottom center;
-        background-size: 100% 100%;
+        background: rgba(255, 255, 255, .4) url(../images/ipadBG.jpg) no-repeat bottom center;
+        background-size: cover;
     }
     #block-for-slider {
         width: 100%;
-        margin: 100px auto;
-        margin-top: 40px;
+        margin: 40px auto 100px;
+    }
+}
+
+@media screen and (max-width: 670px) {
+    body {
+        background: rgba(255, 255, 255, .4) url(../images/iphone6BG.jpg) no-repeat bottom center;
+        background-size: cover;
+    }
+}
+
+@media screen and (max-width: 570px) {
+    body {
+        background: rgba(255, 255, 255, .4) url(../images/ipodBG.jpg) no-repeat bottom center;
+        background-size: cover;
     }
 }
