--- a/css/media.css
+++ b/css/media.css
@@ -14,16 +14,18 @@
     }
 }*/
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   body {
-    background: rgba(255, 255, 255, .4) url(../images/piece.jpg) repeat;
+    background: rgba(255, 255, 255, .4) url(../images/4.png) repeat;
     /*background-size: cover;*/
   }
-
-
 
   #block-for-slider {
     width: 100%;
     margin: 40px auto 100px;
+  }
+
+  .ci_widget_sponsors a > img {
+    max-width: 281px;
   }
 }
