--- a/css/style.css
+++ b/css/style.css
@@ -1348,9 +1348,9 @@ ul.verdict .bad h4 {
   -o-user-select: none;
   user-select: none;
   text-align: center;
-  -webkit-box-shadow: 0 6px 10px 4px rgba(255, 255, 255, 0.1);
-          box-shadow: 0 6px 10px 4px rgba(255, 255, 255, 0.1);
-  max-height: 350px;
+  -webkit-box-shadow: 0 2px 10px 20px rgba(255, 255, 255, 0.3);
+          box-shadow: 0 2px 10px 20px rgba(255, 255, 255, 0.3);
+  max-height: 590px;
 }
 
 #slidewrapper {
@@ -1382,6 +1382,7 @@ ul.verdict .bad h4 {
 
 .slide-img {
   width: 100%;
+  border-radius: 3px;
 }
 
 #prev-btn,
