--- a/dev/media.css
+++ b/dev/media.css
@@ -3,6 +3,9 @@
         background: rgba(255, 255, 255, .4) url(../images/4.png) center repeat;
         /*background-size: cover;*/
     }
+    #viewport {
+
+    }
     #block-for-slider {
         width: 100%;
         margin: 40px auto 100px;
