--- a/dev/style.css
+++ b/dev/style.css
@@ -1313,8 +1313,8 @@ ul.verdict .bad h4 {
     -o-user-select: none;
     user-select: none;
     text-align: center;
-    box-shadow: 0 6px 10px 4px rgba(255, 255, 255, 0.1);
-    max-height: 350px;
+    box-shadow: 0 2px 10px 20px rgba(255, 255, 255, 0.3);
+    max-height: 590px;
 }
 
 #slidewrapper {
@@ -1338,10 +1338,12 @@ ul.verdict .bad h4 {
     list-style: none;
     display: inline;
     float: left;
+    border-radius: 3px;
 }
 
 .slide-img {
     width: 100%;
+    border-radius: 3px;
 }
 
 #prev-btn, #next-btn {
