--- a/dev/style.css
+++ b/dev/style.css
@@ -1293,18 +1293,19 @@ ul.verdict .bad h4 {
 
 
 
-
+/*   ============   SLIDER   ============   */
 
 
 
 #block-for-slider {
     width: 100%;
     margin: 100px auto;
-}
+    background: rgba(255, 255, 255, 0.3) !important;}
+
 
 #viewport {
     width: 100%;
-    border-radius: 3px;
+    border-radius: 1px;
     position: relative;
     overflow: hidden;
     -webkit-user-select: none;
@@ -1410,7 +1411,9 @@ ul.verdict .bad h4 {
     max-width: 100px;
     max-height: 90px
 }
+ ul {
+     -webkit-margin-after: 0em !important;
+     -webkit-margin-before: 0em !important;
+ }
 
 
-
-@import "media.css";
