--- a/css/media.css
+++ b/css/media.css
@@ -20,11 +20,10 @@
     /*background-size: cover;*/
   }
 
-
-
   #block-for-slider {
     width: 100%;
     margin: 40px auto 100px;
+    background: rgba(255, 255, 255, 0.3);
   }
 
   .ci_widget_sponsors a > img {
