--- a/css/style.css
+++ b/css/style.css
@@ -1342,7 +1342,6 @@ ul.verdict .bad h4 {
 
 #viewport {
   width: 100%;
-  border-radius: 1px;
   position: relative;
   overflow: hidden;
   -webkit-user-select: none;
@@ -1354,6 +1353,10 @@ ul.verdict .bad h4 {
   -webkit-box-shadow: 0 2px 10px 20px rgba(255, 255, 255, 0.3);
           box-shadow: 0 2px 10px 20px rgba(255, 255, 255, 0.3);
   max-height: 590px;
+  border-radius: 1px;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
 }
 
 #slidewrapper {
@@ -1366,6 +1369,7 @@ ul.verdict .bad h4 {
   -webkit-transition-timing-function: cubic-bezier(.67, .01, .23, 1);
   -o-transition-timing-function: cubic-bezier(.67, .01, .23, 1);
   transition-timing-function: cubic-bezier(.67, .01, .23, 1);
+  border-radius: 8px;
 }
 
 #slidewrapper,
@@ -1381,12 +1385,18 @@ ul.verdict .bad h4 {
   list-style: none;
   display: inline;
   float: left;
-  border-radius: 3px;
+  border-radius: 8px;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
 }
 
 .slide-img {
   width: 100%;
-  border-radius: 3px;
+  border-radius: 8px;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
 }
 
 #prev-btn,
