--- a/dev/style.css
+++ b/dev/style.css
@@ -1305,7 +1305,6 @@ ul.verdict .bad h4 {
 
 #viewport {
     width: 100%;
-    border-radius: 1px;
     position: relative;
     overflow: hidden;
     -webkit-user-select: none;
@@ -1316,6 +1315,8 @@ ul.verdict .bad h4 {
     text-align: center;
     box-shadow: 0 2px 10px 20px rgba(255, 255, 255, 0.3);
     max-height: 590px;
+    border-radius: 1px;
+    transition: 1s;
 }
 
 #slidewrapper {
@@ -1327,6 +1328,7 @@ ul.verdict .bad h4 {
     -webkit-transition-timing-function: cubic-bezier(.67, .01, .23, 1);
     -o-transition-timing-function: cubic-bezier(.67, .01, .23, 1);
     transition-timing-function: cubic-bezier(.67, .01, .23, 1);
+    border-radius: 8px;
 }
 
 #slidewrapper, #slidewrapper ul, #slidewrapper li {
@@ -1339,12 +1341,15 @@ ul.verdict .bad h4 {
     list-style: none;
     display: inline;
     float: left;
-    border-radius: 3px;
+    border-radius: 8px;
+    transition: 1s;
 }
 
 .slide-img {
     width: 100%;
-    border-radius: 3px;
+    border-radius: 8px;
+    transition: 1s;
+
 }
 
 #prev-btn, #next-btn {
