--- a/dev/style.css
+++ b/dev/style.css
@@ -1300,7 +1300,9 @@ ul.verdict .bad h4 {
 #block-for-slider {
     width: 100%;
     margin: 100px auto;
-    background: rgba(255, 255, 255, 0.3) !important;}
+    background: rgba(255, 255, 255, 0.3) !important;
+    border-radius: 8px
+}
 
 
 #viewport {
@@ -1315,7 +1317,7 @@ ul.verdict .bad h4 {
     text-align: center;
     box-shadow: 0 2px 10px 20px rgba(255, 255, 255, 0.3);
     max-height: 590px;
-    border-radius: 1px;
+    border-radius: 8px;
     transition: 1s;
 }
 
@@ -1349,7 +1351,6 @@ ul.verdict .bad h4 {
     width: 100%;
     border-radius: 8px;
     transition: 1s;
-
 }
 
 #prev-btn, #next-btn {
