--- a/css/style.css
+++ b/css/style.css
@@ -1478,6 +1478,10 @@ ul {
   -webkit-margin-before: 0em !important;
 }
 
+.secondSocial {
+  display: none;
+}
+
 @media only screen and (max-width: 959px) {
   #navigation > ul {
     display: block;
