--- a/css/style.css
+++ b/css/style.css
@@ -1274,8 +1274,8 @@ ul.verdict .bad h4 {
 /* Top Rated */
 
 .ci_widget_top ul li {
-  padding-bottom: 20px;
-  padding-top: 19px;
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
 
 .ci_widget_top img {
@@ -1338,7 +1338,7 @@ ul.verdict .bad h4 {
 
 #block-for-slider {
   width: 100%;
-  margin: 100px auto;
+  margin: 70px auto;
   background: rgba(255, 255, 255, 0.3) !important;
   border-radius: 8px;
 }
@@ -1478,6 +1478,27 @@ ul.verdict .bad h4 {
 ul {
   -webkit-margin-after: 0em !important;
   -webkit-margin-before: 0em !important;
+}
+
+.header {
+  background: #1e2026 url(../images/bg_footer.png) no-repeat bottom center;
+  border-bottom: solid 1px #30333c;
+}
+
+.logo-social {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 60px;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media only screen and (max-width: 959px) {
