--- a/css/media.css
+++ b/css/media.css
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 767px) {
   body {
-    background: rgba(255, 255, 255, .4) url(../images/smallBG2.jpg) center repeat;
+    background: rgba(255, 255, 255, .4) url(../images/4.png) center repeat;
     /*background-size: cover;*/
   }
 
@@ -29,15 +29,4 @@
   .ci_widget_sponsors a > img {
     max-width: 281px;
   }
-  .logo-social {
-      flex-direction: column;
-      display: flex;
-      height: 100px;
-      justify-content: space-around;
-      align-items: center;
-  }
-    .contentBlock {
-        flex-direction: column-reverse;
-        display: flex;
-    }
 }
