--- a/css/style.css
+++ b/css/style.css
@@ -560,11 +560,9 @@ textarea:focus {
 
 .nav-search {
   /*background: url(../images/bg_nav.png) no-repeat;*/
-  height: 60px;
+  height: 100%;
   border-top-left-radius: 2px;
   border-top-right-radius: 2px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .nav {
@@ -582,7 +580,7 @@ textarea:focus {
   display: block;
   color: #fff;
   font-size: 13px;
-  padding: 23px;
+  padding: 20px;
   background: url(../images/bg_nav_divider.png) no-repeat right;
   text-shadow: 0 -1px rgba(0, 0, 0, 0.2);
 }
@@ -1496,6 +1494,7 @@ ul {
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
           box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
   border-bottom: solid 1px #30333c;
+  background-size: cover;
 }
 
 .logo-social {
@@ -1518,6 +1517,29 @@ ul {
   margin-top: 50px;
 }
 
+/* ====== MENU ====== */
+
+nav .wrapper {
+  position: relative;
+}
+
+.menu li {
+  float: left;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.menuToggle {
+  padding: 8px;
+  padding-right: 60px;
+  display: none;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 959px) {
   #navigation > ul {
     display: block;
@@ -1525,6 +1547,30 @@ ul {
 
   #navigation > select {
     display: none;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .nav li a {
+    padding: 5px;
+  }
+
+  .nav li:last-child a {
+    padding-bottom: 10px;
+  }
+
+  .menu {
+    display: none;
+    position: absolute;
+    width: 100vw;
+  }
+
+  .menu li {
+    float: none;
+  }
+
+  .menuToggle {
+    display: inline-block;
   }
 }
 
