--- a/dev/media.css
+++ b/dev/media.css
@@ -1,16 +1,27 @@
 @media screen and (max-width: 767px) {
     body {
-        background: rgba(255, 255, 255, .4) url(../images/4.png) center repeat;
+        background: rgba(255, 255, 255, .4) url(../images/smallBG2.jpg) center repeat;
         /*background-size: cover;*/
     }
     #block-for-slider {
         width: 100%;
-        margin: 40px auto 100px;
+        margin: 140px auto 40px;
         background: rgba(255, 255, 255, 0.3);
     }
     .ci_widget_sponsors a > img {
         max-width: 281px;
     }
+    .header {
+       height: auto;
+    }
+    .logo-social {
+        height: 100%;
+        flex-direction: column;
+    }
+    #navigation {
+        justify-content: center;
+    }
+
 }
 /*
 
@@ -27,3 +38,6 @@
         background-size: cover;
     }
 }*/
+
+
+
