--- a/css/media.css
+++ b/css/media.css
@@ -22,7 +22,7 @@
 
   #block-for-slider {
     width: 100%;
-    margin: 140px auto 40px;
+    margin: 60px auto 40px;
     background: rgba(255, 255, 255, 0.3);
   }
 
@@ -48,5 +48,17 @@
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+
+  .columnRevers {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
 }
