--- a/dev/media.css
+++ b/dev/media.css
@@ -5,7 +5,7 @@
     }
     #block-for-slider {
         width: 100%;
-        margin: 140px auto 40px;
+        margin: 60px auto 40px;
         background: rgba(255, 255, 255, 0.3);
     }
     .ci_widget_sponsors a > img {
@@ -20,6 +20,10 @@
     }
     #navigation {
         justify-content: center;
+    }
+    .columnRevers {
+        display: flex;
+        flex-direction: column-reverse;
     }
 
 }
