--- a/dev/style.css
+++ b/dev/style.css
@@ -1448,6 +1448,7 @@ ul.verdict .bad h4 {
 /* ====== MENU ====== */
 nav .wrapper {
     position: relative;
+    z-index: 999999999;
 }
 
 .menu li {
@@ -1476,7 +1477,9 @@ nav .wrapper {
     .menu {
         display: none;
         position: absolute;
-        width: 100vw;
+        width: 100%;
+        background: rgba(37, 44, 53, 0.8);
+        background-size: cover;
     }
     .menu li {
         float: none;
