--- a/dev/media.css
+++ b/dev/media.css
@@ -23,7 +23,10 @@
     }
     .columnRevers {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column-reverse !important;
+    }
+    .mobileDown {
+        display: run-in;
     }
 
 }
