--- a/css/media.css
+++ b/css/media.css
@@ -36,18 +36,26 @@
 
   .logo-social {
     height: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    width: 96%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 
   #navigation {
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 
   .columnRevers {
@@ -64,5 +72,38 @@
 
   .mobileDown {
     display: run-in;
+  }
+
+  .wrapper {
+    width: 35%;
+    height: 35px;
+  }
+
+  .menuToggle {
+    width: 35px;
+    height: 35px;
+    background: url("../images/menu.svg") center no-repeat;
+    background-size: contain;
+  }
+
+  .nav-search {
+    height: 50px;
+    width: 55%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .logo {
+    width: 100%;
+  }
+
+  .DESKTOP {
+    display: none !important;
   }
 }
