--- a/dev/style.css
+++ b/dev/style.css
@@ -1429,15 +1429,18 @@ ul.verdict .bad h4 {
 
 
 .header {
-    background: url(../images/bg_nav.png) repeat-x;
+    background: #000;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
     border-bottom: solid 1px #30333c;
     background-size: cover;
+
+    position: relative;
+    z-index: 999999999;
 }
 .logo-social {
     display: flex;
     height: 60px;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -1446,9 +1449,11 @@ ul.verdict .bad h4 {
 }
 
 /* ====== MENU ====== */
-nav .wrapper {
-    position: relative;
-    z-index: 999999999;
+.MOBILE {
+    display: none;
+}
+.DESKTOP {
+    display: block;
 }
 
 .menu li {
@@ -1461,8 +1466,8 @@ nav .wrapper {
 
 }
 .menuToggle {
-    padding: 8px;
-    padding-right: 60px;
+    height: 100%;
+    width: 100%;
     display: none;
     cursor: pointer;
 }
@@ -1485,6 +1490,15 @@ nav .wrapper {
         float: none;
     }
     .menuToggle {
-       display: inline-block;
+       display: block;
     }
 }
+
+.menuToggle {
+    width: 100%;
+    height: 100%;
+    background: url("../images/menu.svg") center no-repeat;
+    background-size: contain;
+}
+
+
