--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -170,7 +170,7 @@
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
     .container {
-        width: 768px;
+        width: 96%;
     }
 
     .container .column,
@@ -433,13 +433,13 @@
 ================================================== */
 
 /* Self Clearing Goodness */
-.container:after {
+/*.container:after {
     content: "\0020";
     display: block;
     height: 0;
     clear: both;
     visibility: hidden;
-}
+}*/
 
 /* Use group class on parent to clear nested columns,
 or wrap each row of columns in a <div class="row"> */
