--- a/dev/style.css
+++ b/dev/style.css
@@ -62,7 +62,6 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 h1 {
     font-size: 28px;
     line-height: 40px;
-    margin-bottom: 14px;
 }
 
 h2 {
@@ -1178,10 +1177,6 @@ ul.verdict .bad h4 {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-    #navigation > ul {
-        display: none;
-    }
-
     #navigation > select {
         display: block;
         margin: 20px 0 0 20px;
@@ -1304,9 +1299,7 @@ ul.verdict .bad h4 {
 
 #block-for-slider {
     width: 100%;
-    margin: 70px auto;
-    background: rgba(255, 255, 255, 0.3) !important;
-    border-radius: 8px
+    margin: 0 auto 30px;
 }
 
 
@@ -1320,9 +1313,7 @@ ul.verdict .bad h4 {
     -o-user-select: none;
     user-select: none;
     text-align: center;
-    box-shadow: 0 2px 10px 20px rgba(255, 255, 255, 0.3);
     max-height: 590px;
-    border-radius: 8px;
     transition: 1s;
 }
 
@@ -1335,7 +1326,6 @@ ul.verdict .bad h4 {
     -webkit-transition-timing-function: cubic-bezier(.67, .01, .23, 1);
     -o-transition-timing-function: cubic-bezier(.67, .01, .23, 1);
     transition-timing-function: cubic-bezier(.67, .01, .23, 1);
-    border-radius: 8px;
 }
 
 #slidewrapper, #slidewrapper ul, #slidewrapper li {
@@ -1354,7 +1344,6 @@ ul.verdict .bad h4 {
 
 .slide-img {
     width: 100%;
-    border-radius: 8px;
     transition: 1s;
 }
 
@@ -1432,8 +1421,6 @@ ul.verdict .bad h4 {
     background: #000;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
     border-bottom: solid 1px #30333c;
-    background-size: cover;
-
     position: relative;
     z-index: 999999999;
 }
@@ -1449,12 +1436,6 @@ ul.verdict .bad h4 {
 }
 
 /* ====== MENU ====== */
-.MOBILE {
-    display: none;
-}
-.DESKTOP {
-    display: block;
-}
 
 .menu li {
     float: left;
@@ -1472,7 +1453,7 @@ ul.verdict .bad h4 {
     cursor: pointer;
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 767px) {
     .nav li a {
         padding: 5px;
     }
@@ -1482,9 +1463,9 @@ ul.verdict .bad h4 {
     .menu {
         display: none;
         position: absolute;
+        top: 40px;
         width: 100%;
         background: rgba(37, 44, 53, 0.8);
-        background-size: cover;
     }
     .menu li {
         float: none;
@@ -1501,4 +1482,33 @@ ul.verdict .bad h4 {
     background-size: contain;
 }
 
+.flexS-B {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+
+.submit__form {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+.submit__link {
+
+}
+.submit__button {
+    animation-name: puls;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    height: auto;
+    width: auto;
+    padding: 5px 15px;
+    border-radius: 3px;
+    border: none;
+    font-size: 22px;
+    font-weight: 600;
+    color: #FFFFF0;
+    background-color: #66e085;
+    box-shadow: 0 0 5px 0 #FFFFF0
+}
