--- a/css/media.css
+++ b/css/media.css
@@ -100,3 +100,10 @@
             flex-direction: row-reverse;
   }
 }
+
+@media screen and (orientation: landscape) {
+  #block-for-slider {
+    width: 80%;
+    margin: 0 auto 30px;
+  }
+}
