--- a/dev/style.css
+++ b/dev/style.css
@@ -1313,7 +1313,7 @@ ul.verdict .bad h4 {
     -o-user-select: none;
     user-select: none;
     text-align: center;
-    max-height: 590px;
+    height: auto;
     transition: 1s;
 }
 
