--- a/dev/media.css
+++ b/dev/media.css
@@ -45,12 +45,26 @@
     .flexS-B {
         flex-direction: row-reverse;
     }
+
+    .mobileHeaderContainer {
+        width: 96%;
+    }
+    .logo {
+        text-align: center;
+        padding-right: 20%;
+    }
 }
 
 @media screen and (orientation: landscape) {
     #block-for-slider {
         width: 80%;
         margin: 0 auto 30px;
+    }
+}
+
+@media screen and (max-width: 767px) and (orientation: landscape) {
+    .logo {
+        padding-right: 35%;
     }
 }
 
