--- a/dev/media.css
+++ b/dev/media.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 767px) {
     body {
-        background: rgba(255, 255, 255, .4) url(../images/smallBG2.jpg) center repeat;
+        background: rgba(255, 255, 255, .4) url(../images/dark-triangles.png) center repeat;
         /*background-size: cover;*/
     }
     .ci_widget_sponsors a > img {
