--- a/css/media.css
+++ b/css/media.css
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 767px) {
   body {
-    background: rgba(255, 255, 255, .4) url(../images/smallBG2.jpg) center repeat;
+    background: rgba(255, 255, 255, .4) url(../images/dark-triangles.png) center repeat;
     /*background-size: cover;*/
   }
 
