--- a/dev/style.css
+++ b/dev/style.css
@@ -1522,8 +1522,60 @@ ul.verdict .bad h4 {
 /*   =========   Footer   =========   */
 .list-group {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column-reverse;
+    align-items: center;
 }
 .footer-info {
     text-align: center
+}
+
+.btn {
+    margin-top: 30px
+}
+.MainFooter {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+
+/*   =========   OneGame   =========   */
+.flexS-A {
+   display: flex;
+    justify-content: space-around;
+}
+.flexAi-C {
+    align-items: center;
+}
+.flexAi-FS {
+    align-items: flex-start;
+}
+.oneGame__img-wrapper {
+    width: 70%;
+    margin: 50px auto 30px;
+}
+.oneGame__img-wrapper > h1 {
+    font-size: 30px;
+}
+.oneGame__img-wrapper:hover h1 {
+    color: #66e085;;
+}
+.content {
+    padding: 15px;
+}
+.content__img, .content__Oneimg {
+    max-height: 250px;
+    max-width: 400px;
+}
+.content__img {
+    margin: 15px 0;
+
+}
+.content__Oneimg {
+    height: 100%;
+}
+.description {
+    width: 50%
+}
+.screenshot {
+    width: 40%
 }
