--- a/dev/style.css
+++ b/dev/style.css
@@ -1549,18 +1549,19 @@ ul.verdict .bad h4 {
 .flexAi-FS {
     align-items: flex-start;
 }
-.oneGame__img-wrapper {
+.oneGame__wrapper {
     width: 70%;
     margin: 50px auto 30px;
 }
-.oneGame__img-wrapper > h1 {
+.oneGame__wrapper > h1 {
     font-size: 30px;
 }
-.oneGame__img-wrapper:hover h1 {
+.oneGame__wrapper:hover h1 {
     color: #66e085;;
 }
 .content {
     padding: 15px;
+    height: auto;
 }
 .content__img, .content__Oneimg {
     max-height: 250px;
@@ -1577,5 +1578,7 @@ ul.verdict .bad h4 {
     width: 50%
 }
 .screenshot {
+    display: flex;
+    flex-direction: column;
     width: 40%
 }
